Add another notebook and upgrade JL version

--- a/notebooks/Ibis + Altair.ipynb
+++ b/notebooks/Ibis + Altair.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,6 +74,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "How many rows is this?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "572002"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr.count().execute()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Browser rendering\n",
     "Now, let's first try rendering this by getting a Pandas DataFrame \n",
     "and rendering this on the browser"
@@ -81,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,48 +140,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-5199052.5</td>\n",
-       "      <td>-2697342.50</td>\n",
-       "      <td>528342118092509184</td>\n",
+       "      <td>-7.914006e+06</td>\n",
+       "      <td>5.216750e+06</td>\n",
+       "      <td>528341052626051072</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-5184981.5</td>\n",
-       "      <td>-2697610.75</td>\n",
-       "      <td>528342071904837632</td>\n",
+       "      <td>1.199418e+07</td>\n",
+       "      <td>-7.817018e+05</td>\n",
+       "      <td>528343309073125376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-5698376.0</td>\n",
-       "      <td>-3398573.75</td>\n",
-       "      <td>528338938571001856</td>\n",
+       "      <td>-1.080830e+07</td>\n",
+       "      <td>3.898134e+06</td>\n",
+       "      <td>528341052517019648</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>13476805.0</td>\n",
-       "      <td>1632639.50</td>\n",
-       "      <td>528339312195035136</td>\n",
+       "      <td>1.185110e+07</td>\n",
+       "      <td>-6.918072e+05</td>\n",
+       "      <td>528343309165424640</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-4849920.5</td>\n",
-       "      <td>-2598166.50</td>\n",
-       "      <td>528338888172265472</td>\n",
+       "      <td>-1.275724e+05</td>\n",
+       "      <td>6.974110e+06</td>\n",
+       "      <td>528343309279047680</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            x           y               rowid\n",
-       "0  -5199052.5 -2697342.50  528342118092509184\n",
-       "1  -5184981.5 -2697610.75  528342071904837632\n",
-       "2  -5698376.0 -3398573.75  528338938571001856\n",
-       "3  13476805.0  1632639.50  528339312195035136\n",
-       "4  -4849920.5 -2598166.50  528338888172265472"
+       "              x             y               rowid\n",
+       "0 -7.914006e+06  5.216750e+06  528341052626051072\n",
+       "1  1.199418e+07 -7.817018e+05  528343309073125376\n",
+       "2 -1.080830e+07  3.898134e+06  528341052517019648\n",
+       "3  1.185110e+07 -6.918072e+05  528343309165424640\n",
+       "4 -1.275724e+05  6.974110e+06  528343309279047680"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
